[metadata]
name = mfrc522_i2c
version = 0.0.4
author = Christoph Pranzl
author_email = christoph.pranzl@pranzl.net
description = MFRC522 RFID reader/writer I2C driver in Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cpranzl/mfrc522_i2c
project_urls =
    Bug Tracker = https://github.com/cpranzl/mfrc522_i2c/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
